--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -91,3 +91,58 @@ main {
 .nav-link-end {
 	margin-left: auto;
 }
+
+
+
+.ui-card{
+	width: 90vw;
+	max-width: 1200px;
+}
+
+
+/**
+	Button
+*/
+
+.ui-button{
+	margin: 0rem 1rem !important;
+}
+
+
+.save-btn {
+	background: #39b54a !important;
+	border-color: #39b54a !important;
+}
+
+
+/**
+	Formulare
+*/
+.form-input {
+    display: flex;
+    flex-direction: column;
+    text-align: start;
+    margin: 1rem;
+}
+
+.ui-datatable {
+	margin: 1rem !important;
+}
+
+.card-header-text {
+    font-size: 1.4rem;
+    font-weight: bold;
+    padding: 1rem 0;
+    display: block;
+}
+
+.custom-card .ui-card-header {
+    padding: 1.5rem;
+    background-color: #f8f9fa;
+    border-bottom: 1px solid #dee2e6;
+}
+
+.table-header {
+	font-weight: bold;
+	font-size: 1.4em;
+}
